# rust_gambling_and_bank_simulation

./: Cargo.toml
src/: gambling.rs  input.rs  main.rs  reader.rs
src/data/: users.json
src/service/: action.rs  login.rs  register.rs
src/service/model/: login_model.rs  process_model.rs  user_model.rs
